# AERO

./: .combined_requirements.sig  .combined_requirements.txt  .env.example  .gitignore  CODEBASE_ORGANIZATION.md  ML_RESEARCHER_FLOW_MAP.md  MULTI_WORKFLOW_ARCHITECTURE.md  PAPER_WRITING_IMPLEMENTATION.md  README.md  README_FRONTEND.md  README_langgraph.md  Report_to_txt.py  Report_to_txt_old.py  app.py  arxiv.py  arxiv_paper_utils.py  create_workflow_diagram.py  decomp2.py  design_experiment.py  env.example.template  example_file_input_usage.py  example_litellm.py  example_usage.py  experiment_designs_output1.md  from tavily import TavilyClient.py  frontend.html  generate_mermaid_diagrams.py  generated_paper_20250911_123150.md  generated_paper_20250911_134121.md  generated_paper_20250911_135134.md  generated_paper_20250918_185803.md  generated_paper_20250918_205909.md  generated_paper_20250918_211228.md  generated_paper_20250918_212313.md  generated_paper_20250918_214941.md  generated_paper_20250918_221921.md  generated_paper_20250918_234220.md  ml_report_integration.py  ml_research_assistant.py  ml_researcher_langgraph.py  (+33 more)
Arxiv_utils/: Report_to_txt.py  arxiv_paper_utils.py
Faiss/: arxiv_chunks_faiss.index
Suggest_additional_expirments/: experiment_suggestion_nodes.py
Suggest_models/: README.md  __init__.py  model_suggestion_nodes.py
design_experiment/: README.md  __init__.py  code.py  experiment.py  experiment_tree.py  idea_tree.py  init_utils.py  main.py  requirements_experiment_tree.txt  search.py
diagrams/: QUICK_START.md  README_integration.md  USAGE_INSTRUCTIONS.md  complete_system_overview.mmd  conditional_logic_diagram.mmd  critique_refinement_workflow.mmd  model_suggestion_workflow.mmd  research_planning_workflow.mmd  router_workflow.mmd  state_flow_diagram.mmd  (+1 more)
(+57 files in other folders)
